--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -499,7 +499,7 @@
 
 
   <!-- latest jquery-->
-  <script src="/assets/js/jquery-3.3.1.min.js"></script>
+  <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
 
   <!-- menu js-->
   <script src="/assets/js/menu.js"></script>
@@ -511,11 +511,12 @@
   <script src="/assets/js/slick.js"></script>
 
   <!-- Bootstrap js-->
-  <script src="/assets/js/bootstrap.bundle.min.js"></script>
-
+  {{!-- <script src="/assets/js/bootstrap.bundle.min.js"></script> --}}
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
   <!-- feather icon js-->
-  <script src="/assets/js/feather.min.js "></script>
-
+  {{!-- <script src="/assets/js/feather.min.js "></script> --}}
+  <script src="https://cdn.jsdelivr.net/npm/feather-icons/dist/feather.min.js"></script>
+  
   <!-- Video js-->
   <script src="/assets/js/jquery.vide.min.js"></script>
 
