--- a/views/index.hbs
+++ b/views/index.hbs
@@ -20,7 +20,7 @@
         </div>
         <div>
             <a href="product-page(no-sidebar).html" class="bg-size blur-up lazyloaded"
-                style="background-image: url(&quot;../assets/images/pro3/36.jpg&quot;); background-size: cover; background-position: center center; display: block;"
+                style=" background-size: cover; background-position: center center; display: block;"
                 tabindex="0"><img src="../assets/images/menu-banner.jpg" class="img-fluid blur-up lazyload bg-img"
                     alt="" style="display: none;"></a>
             <div class="home text-center">
