--- a/views/auth/profile.hbs
+++ b/views/auth/profile.hbs
@@ -61,7 +61,7 @@
                         <div class="tab-pane fade show active" id="info">
                             <div class="counter-section">
                                 <div class="welcome-msg">
-                                    <h4>Hello, {{findUserfromDB.firstName}} {{findUserfromDB.lastName}} !</h4>
+                                    <h4>Hello, {{findUserfromDB.firstName}} {{findUserfromDB.lastName}} {{#ifEquals findUserfromDB.userType "admin"}} (Admin) {{/ifEquals}} !</h4>
                                     <p>From your My Account Dashboard you have the ability to view a snapshot of your
                                         recent
                                         account activity and update your account information. Select a link below to
@@ -74,8 +74,8 @@
                                          
                                             <img src="../assets/images/icon/dashboard/sale.png" class="img-fluid">
                                             <div>
-                                                <h3>${{subTotal}}</h3>
-                                                <h5>Total Order</h5>
+                                                <h3>345</h3>
+                                                <h5>Total Orders</h5>
                                              
                                             </div>
                                         </div>
@@ -85,21 +85,11 @@
                                             <img src="../assets/images/icon/dashboard/homework.png" class="img-fluid">
                                             <div>
                                                 
-                                                <h3>{{subTotal}}</h3>
-    
+                                                <h3>56</h3>
                                                 <h5>Pending Orders</h5>
                                             </div>
                                         </div>
                                     </div>
-                                    {{!-- <div class="col-md-4">
-                                        <div class="counter-box">
-                                            <img src="../assets/images/icon/dashboard/order.png" class="img-fluid">
-                                            <div>
-                                                <h3>50</h3>
-                                                <h5>Wishlist</h5>
-                                            </div>
-                                        </div>
-                                    </div> --}}
                                 </div>
                                 <div class="box-account box-info">
                                     <div class="box-head">
