--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -158,7 +158,7 @@
                           <a href="#">
                             <h4>{{name}}</h4>
                           </a>
-                          <h4><span>{{price}}</span></h4>
+                          <h4><span>{{price}} €</span></h4>
                         </div>
                       </div>
                       <div class="close-circle"><a href="#"><i class="fa fa-times" aria-hidden="true"></i></a></div>
@@ -168,7 +168,7 @@
 
                     <li>
                       <div class="total">
-                        <h5>subtotal : <span>{{subTotal}}</span></h5>
+                        <h5>subtotal : <span>{{subTotal}} €</span></h5>
                       </div>
                     </li>
                     <li>
@@ -378,113 +378,6 @@
       </div>
     </div>
   </footer>
-  {{!-- <div class="modal fade bd-example-modal-lg theme-modal cart-modal" id="addtocart" tabindex="-1" role="dialog"
-    aria-hidden="true">
-    <div class="modal-dialog modal-lg modal-dialog-centered" role="document">
-      <div class="modal-content">
-        <div class="modal-body modal1">
-          <div class="container-fluid p-0">
-            <div class="row">
-              <div class="col-12">
-                <div class="modal-bg addtocart">
-                  <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                  </button>
-                  <div class="media">
-                    <a href="#">
-                      <img class="img-fluid blur-up lazyload pro-img" src="/assets/images/fashion/product/43.jpg"
-                        alt="">
-                    </a>
-                    <div class="media-body align-self-center text-center">
-                      <a href="#">
-                        <h6>
-                          <i class="fa fa-check"></i>Item
-                          <span>men full sleeves</span>
-                          <span> successfully added to your Cart</span>
-                        </h6>
-                      </a>
-                      <div class="buttons">
-                        <a href="#" class="view-cart btn btn-solid">Your cart</a>
-                        <a href="#" class="checkout btn btn-solid">Check out</a>
-                        <a href="#" class="continue btn btn-solid">Continue shopping</a>
-                      </div>
-
-                      <div class="upsell_payment">
-                        <img src="/assets/images/payment_cart.png" class="img-fluid blur-up lazyload" alt="">
-                      </div>
-                    </div>
-                  </div>
-                  <div class="product-section">
-                    <div class="col-12 product-upsell text-center">
-                      <h4>Customers who bought this item also.</h4>
-                    </div>
-                    <div class="row" id="upsell_product">
-                      <div class="product-box col-sm-3 col-6">
-                        <div class="img-wrapper">
-                          <div class="front">
-                            <a href="#">
-                              <img src="/assets/images/fashion/product/1.jpg" class="img-fluid blur-up lazyload mb-1"
-                                alt="cotton top">
-                            </a>
-                          </div>
-                          <div class="product-detail">
-                            <h6><a href="#"><span>cotton top</span></a></h6>
-                            <h4><span>$25</span></h4>
-                          </div>
-                        </div>
-                      </div>
-                      <div class="product-box col-sm-3 col-6">
-                        <div class="img-wrapper">
-                          <div class="front">
-                            <a href="#">
-                              <img src="/assets/images/fashion/product/34.jpg" class="img-fluid blur-up lazyload mb-1"
-                                alt="cotton top">
-                            </a>
-                          </div>
-                          <div class="product-detail">
-                            <h6><a href="#"><span>cotton top</span></a></h6>
-                            <h4><span>$25</span></h4>
-                          </div>
-                        </div>
-                      </div>
-                      <div class="product-box col-sm-3 col-6">
-                        <div class="img-wrapper">
-                          <div class="front">
-                            <a href="#">
-                              <img src="/assets/images/fashion/product/13.jpg" class="img-fluid blur-up lazyload mb-1"
-                                alt="cotton top">
-                            </a>
-                          </div>
-                          <div class="product-detail">
-                            <h6><a href="#"><span>cotton top</span></a></h6>
-                            <h4><span>$25</span></h4>
-                          </div>
-                        </div>
-                      </div>
-                      <div class="product-box col-sm-3 col-6">
-                        <div class="img-wrapper">
-                          <div class="front">
-                            <a href="#">
-                              <img src="/assets/images/fashion/product/19.jpg" class="img-fluid blur-up lazyload mb-1"
-                                alt="cotton top">
-                            </a>
-                          </div>
-                          <div class="product-detail">
-                            <h6><a href="#"><span>cotton top</span></a></h6>
-                            <h4><span>$25</span></h4>
-                          </div>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div> --}}
   <!-- Add to cart modal popup end-->
 
 
@@ -526,8 +419,7 @@
   <!-- Theme js-->
   <script src="/assets/js/theme-setting.js"></script>
   <script src="/assets/js/script.js"></script>
-<script src="https://js.stripe.com/v3/"></script>
-<script src="/assets/js/payment.js"></script>
+
   <script>
     $(window).on('load', function () {
       setTimeout(function () {
