--- a/views/order/checkout.hbs
+++ b/views/order/checkout.hbs
@@ -25,9 +25,6 @@
                 <form action="/order/checkout" method="post">
                     <div class="row">
                         <div class="col-lg-6 col-sm-12 col-xs-12">
-                            {{!-- <div class="checkout-title">
-                                <h3>Billing Details</h3>
-                            </div> --}}
                             <div class="checkout-details">
                                 <div class="order-box">
                                     <div class="title-box">
@@ -43,60 +40,16 @@
                                     </div>
                                     {{#each cartItems}}
                                     <ul class="qty">
-                                        <li>{{name}} <span>{{price}}€</span></li>
+                                        <li>{{name}} <span>{{price}} €</span></li>
                                     </ul>
                                     {{/each }}
                                     <ul class="sub-total">
-                                        {{!-- <li>Subtotal <span class="count"></span></li> --}}
-                                        {{!-- <li>Shipping
-                                            <div class="shipping">
-                                                <div class="shopping-option">
-                                                    <input type="checkbox" name="free-shipping" id="free-shipping">
-                                                    <label for="free-shipping">Free Shipping</label>
-                                                </div>
-                                                <div class="shopping-option">
-                                                    <input type="checkbox" name="local-pickup" id="local-pickup">
-                                                    <label for="local-pickup">Local Pickup</label>
-                                                </div>
-                                            </div>
-                                        </li> --}}
                                     </ul>
                                     <ul class="total">
-                                        <li>Total <span class="count">{{subTotal}}€</span></li>
+                                        <li>Total <span class="count">{{subTotal}} €</span></li>
                                     </ul>
 
                                 </div>
-                                {{!-- <div class="form-group col-md-6 col-sm-6 col-xs-12">
-                                    <div class="field-label">First Name</div>
-                                    <input type="text" name="field-name" value="" placeholder="">
-                                </div> --}}
-                                {{!-- <div class="form-group col-md-6 col-sm-6 col-xs-12">
-                                    <div class="field-label">Last Name</div>
-                                    <input type="text" name="field-name" value="" placeholder="">
-                                </div> --}}
-                                {{!-- <div class="form-group col-md-6 col-sm-6 col-xs-12">
-                                    <div class="field-label">Total Amount</div>
-                                    <input type="text" name="{{subTota}}" value="" placeholder="">
-                                </div> --}}
-                                {{!-- <div class="form-group col-md-6 col-sm-6 col-xs-12">
-                                    <div class="field-label">Payment Method</div>
-                                    <input type="Number" name="payment_method" value="" placeholder="">
-                                </div> --}}
-                                {{!-- <div class="form-group col-md-12 col-sm-12 col-xs-12">
-                                    <div class="field-label">Country</div>
-                                    <select>
-                                        <option>India</option>
-                                        <option>South Africa</option>
-                                        <option>United State</option>
-                                        <option>Australia</option>
-                                    </select>
-                                </div> --}}
-                                
-                                {{!--
-                                <div class="form-group col-lg-12 col-md-12 col-sm-12 col-xs-12">
-                                    <input type="checkbox" name="shipping-option" id="account-option">  
-                                    <label for="account-option">Create An Account?</label>
-                                </div> --}}
                             </div>
                         </div>
                         <div class="col-lg-6 col-sm-12 col-xs-12">
@@ -108,7 +61,7 @@
                                     </div>
 
                                     <ul class="total">
-                                        <li>Total <span class="count">{{subTotal}}€</span></li>
+                                        <li>Total <span class="count">{{subTotal}} €</span></li>
                                     </ul>
 
                                 </div>
@@ -116,19 +69,9 @@
                                     <form id="payment-form">
                                         <div class="upper-box">
                                             <div class="payment-options">
-
-                                                {{!-- <div id="link-authentication-element">
-                                                    <!--Stripe.js injects the Link Authentication Element-->
-                                                </div> --}}
                                                 <div id="payment-element">
                                                     <!--Stripe.js injects the Payment Element-->
                                                 </div>
-                                                {{!-- <button id="submit">
-                                                    <div class="spinner hidden" id="spinner"></div>
-                                                    <span id="button-text">Pay now</span>
-                                                </button>
-                                                <div id="payment-message" class="hidden"></div> --}}
-
                                             </div>
                                         </div>
                                         <div class="text-end">
@@ -149,3 +92,6 @@
         </div>
     </div>
 </section>
+
+<script src="https://js.stripe.com/v3/"></script>
+<script src="/assets/js/payment.js"></script>
