--- a/views/auth/profile.hbs
+++ b/views/auth/profile.hbs
@@ -9,7 +9,7 @@
                 <div class="col-sm-6">
                     <nav aria-label="breadcrumb" class="theme-breadcrumb">
                         <ol class="breadcrumb">
-                            <li class="breadcrumb-item"><a href="index.html">Home</a></li>
+                            <li class="breadcrumb-item"><a href="/">Home</a></li>
                             <li class="breadcrumb-item active" aria-current="page">dashboard</li>
                         </ol>
                     </nav>
@@ -437,7 +437,7 @@
                                             <div class="dashboard-box">
                                                 <div class="dashboard-title">
                                                     <h4>profile</h4>
-                                                    <a class="edit-link" href="#">edit</a>
+                                                    <a class="edit-link" href="/auth/{{findUserfromDB._id}}/edit">edit</a>
                                                 </div>
                                                 <div class="dashboard-detail">
                                                     <ul>
