--- a/views/auth/edit-profile.hbs
+++ b/views/auth/edit-profile.hbs
@@ -21,8 +21,7 @@
 <div class="container-xl px-4 mt-4">
     <!-- Account page navigation-->
 
-    <hr class="mt-0 mb-4">
-    <div class="row">
+    <div style="margin-top: 4rem; margin-bottom: 4rem;" class="row">
         <div class="col-xl-4">
             <!-- Profile picture card-->
             <div class="card mb-4 mb-xl-0">
@@ -33,7 +32,8 @@
                     <!-- Profile picture help block-->
                     <div class="small font-italic text-muted mb-4">JPG or PNG no larger than 5 MB</div>
                     <!-- Profile picture upload button-->
-                    <button class="btn btn-primary" type="button">Upload new image</button>
+                    {{!-- <button class="btn btn-primary" type="button">Upload new image</button> --}}
+                    <a class="btn btn-primary" href="/auth/{{profilebyId._id}}/imag">Upload new image</a>
                 </div>
             </div>
         </div>
@@ -58,39 +58,44 @@
                             <!-- Form Group (last name)-->
                             <div class="col-md-6">
                                 <label class="small mb-1" for="inputLastName">Last name</label>
-                                <input class="form-control" id="inputLastName" type="text" value="{{profilebyId.lastName}}" name="lastName">
+                                <input class="form-control" id="inputLastName" type="text"  value="{{profilebyId.lastName}}" name="lastName">
                             </div>
                         </div>
                         <!-- Form Row        -->
                         <div class="row gx-3 mb-3">
                             <!-- Form Group (organization name)-->
                             <div class="col-md-6">
-                                <label class="small mb-1" for="inputOrgName">Organization name</label>
+                                <label class="small mb-1" for="inputOrgName">Email</label>
                                 <input class="form-control" id="inputOrgName" type="text" value="{{profilebyId.email}}" name="email">
                             </div>
+
                             <!-- Form Group (location)-->
                             <div class="col-md-6">
-                                <label class="small mb-1" for="inputLocation">Location</label>
-                                <input class="form-control" id="inputLocation" type="text" value="Enter your location" value="San Francisco, CA">
+                                <label class="small mb-1" for="inputLocation">street address</label>
+                                <input class="form-control" id="inputLocation" type="text" name="address" value="{{profilebyId.address}}">
                             </div>
                         </div>
-                        <!-- Form Group (email address)-->
-                        <div class="mb-3">
-                            <label class="small mb-1" for="inputEmailAddress">Email address</label>
-                            <input class="form-control" id="inputEmailAddress" type="email" value="{{profilebyId.email}}" value="name@example.com">
+                        <!-- Form Group ()-->
+                   
+
+                          <div class="col-md-6">
+                            <label class="small mb-1" for="inputEmailAddress">city/state</label>
+                            <input class="form-control"  id="inputOrgName" name="city_state" type="text" value="{{profilebyId.city_state}}">
                         </div>
+                        
+
                         <!-- Form Row-->
                         <div class="row gx-3 mb-3">
-                            <!-- Form Group (phone number)-->
+                         
                             <div class="col-md-6">
                                 <label class="small mb-1" for="inputPhone">Phone number</label>
-                                <input class="form-control" id="inputPhone" type="tel" placeholder="Enter your phone number" value="{{phoneNumber}}">
+                                <input class="form-control" id="inputPhone" type="tel"  value="{{profilebyId.phoneNumber}}">
                             </div>
                             <!-- Form Group (birthday)-->
                        
                         </div>
                         <!-- Save changes button-->
-                        <button class="btn btn-primary" type="button">Save changes</button>
+                        <button class="btn btn-primary" type="submit" >Save changes</button>
                     </form>
                 </div>
             </div>
