--- a/views/auth/login-details.hbs
+++ b/views/auth/login-details.hbs
@@ -1,3 +1,23 @@
+<div class="breadcrumb-section">
+  <div class="container">
+    <div class="row">
+      <div class="col-sm-6">
+        <div class="page-title">
+          <h2><a style="color: rgb(94, 92, 92);" href="/auth/profile">Profile</a></h2>
+        </div>
+      </div>
+      <div class="col-sm-6">
+        <nav aria-label="breadcrumb" class="theme-breadcrumb">
+          <ol class="breadcrumb">
+            <li class="breadcrumb-item"><a href="/auth/profile">login</a></li>
+            <li class="breadcrumb-item active"><a href="/auth/edit-profile">details</a></li>
+          </ol>
+        </nav>
+      </div>
+    </div>
+  </div>
+</div>
+
 <section style="margin-left: 30rem;" class="login-page section-b-space">
   <form action="/auth/{{byId.id}}/login" method="POST">
     <div class="container">
