--- a/views/category/create.hbs
+++ b/views/category/create.hbs
@@ -3,14 +3,14 @@
     <div class="row">
       <div class="col-sm-6">
         <div class="page-title">
-          <h2>Category</h2>
+          <h2>Create Category</h2>
         </div>
       </div>
       <div class="col-sm-6">
         <nav aria-label="breadcrumb" class="theme-breadcrumb">
           <ol class="breadcrumb">
             <li class="breadcrumb-item"><a href="/">Home</a></li>
-            <li class="breadcrumb-item active">Login</li>
+            <li class="breadcrumb-item active">Create Category</li>
           </ol>
         </nav>
       </div>
