--- a/views/product/allproduct.hbs
+++ b/views/product/allproduct.hbs
@@ -93,29 +93,14 @@
                         </div>
                         <!-- price filter start here -->
                         <div class="collection-collapse-block border-0 open">
-                            <h3 class="collapse-block-title">price</h3>
-                            <div class="collection-collapse-block-content">
-                                <div class="wrapper mt-3">
-                                    <div class="range-slider">
-                                        <span class="irs js-irs-0"><span class="irs"><span class="irs-line"
-                                                    tabindex="-1"><span class="irs-line-left"></span><span
-                                                        class="irs-line-mid"></span><span
-                                                        class="irs-line-right"></span></span><span class="irs-min"
-                                                    style="visibility: hidden;">$0</span><span class="irs-max"
-                                                    style="visibility: hidden;">$1.500</span><span class="irs-from"
-                                                    style="visibility: visible; left: 0%;">$0</span><span class="irs-to"
-                                                    style="visibility: visible; left: 83.3333%;">$1.500</span><span
-                                                    class="irs-single" style="visibility: hidden; left: 36.7424%;">$0 -
-                                                    $1.500</span></span><span class="irs-grid"></span><span
-                                                class="irs-bar" style="left: 1.51515%; width: 96.9697%;"></span><span
-                                                class="irs-shadow shadow-from" style="display: none;"></span><span
-                                                class="irs-shadow shadow-to" style="display: none;"></span><span
-                                                class="irs-slider from" style="left: 0%;"></span><span
-                                                class="irs-slider to" style="left: 96.9697%;"></span></span><input
-                                            type="text" class="js-range-slider irs-hidden-input" value="" readonly="">
+                                <h3 class="collapse-block-title">price</h3>
+                                <div class="collection-collapse-block-content">
+                                    <div class="wrapper mt-3">
+                                        <div class="range-slider">
+                                            <input type="text" class="js-range-slider" value="" />
+                                        </div>
                                     </div>
                                 </div>
-                            </div>
                         </div>
                     </div>
                     <!-- silde-bar colleps block end here -->
