--- a/views/auth/login.hbs
+++ b/views/auth/login.hbs
@@ -1,3 +1,23 @@
+<div class="breadcrumb-section">
+  <div class="container">
+    <div class="row">
+      <div class="col-sm-6">
+        <div class="page-title">
+          <h2>Login</h2>
+        </div>
+      </div>
+      <div class="col-sm-6">
+        <nav aria-label="breadcrumb" class="theme-breadcrumb">
+          <ol class="breadcrumb">
+            <li class="breadcrumb-item"><a href="/">Home</a></li>
+            <li class="breadcrumb-item active" aria-current="page">Login</li>
+          </ol>
+        </nav>
+      </div>
+    </div>
+  </div>
+</div>
+
 <section class="login-page section-b-space">
   <form action="/auth/login" method="POST">
     <div class="container">
