--- a/views/auth/profile.hbs
+++ b/views/auth/profile.hbs
@@ -3,14 +3,14 @@
             <div class="row">
                 <div class="col-sm-6">
                     <div class="page-title">
-                        <h2>dashboard</h2>
+                        <h2>View Profile</h2>
                     </div>
                 </div>
                 <div class="col-sm-6">
                     <nav aria-label="breadcrumb" class="theme-breadcrumb">
                         <ol class="breadcrumb">
                             <li class="breadcrumb-item"><a href="/">Home</a></li>
-                            <li class="breadcrumb-item active" aria-current="page">dashboard</li>
+                            <li class="breadcrumb-item active" aria-current="page">View Profile</li>
                         </ol>
                     </nav>
                 </div>
