--- a/views/product/view-cart.hbs
+++ b/views/product/view-cart.hbs
@@ -1,4 +1,22 @@
-
+<div class="breadcrumb-section">
+  <div class="container">
+    <div class="row">
+      <div class="col-sm-6">
+        <div class="page-title">
+          <h2>View Cart</h2>
+        </div>
+      </div>
+      <div class="col-sm-6">
+        <nav aria-label="breadcrumb" class="theme-breadcrumb">
+          <ol class="breadcrumb">
+            <li class="breadcrumb-item"><a href="/">Home</a></li>
+            <li class="breadcrumb-item active" aria-current="page">View Cart</li>
+          </ol>
+        </nav>
+      </div>
+    </div>
+  </div>
+</div>
 <section class="cart-section section-b-space">
         <div class="container">
             <div class="row">
